Change to option, have custom error for try_from (might want to just use that error in the future), and add some tests. Integration tests because I don't need to unit test here - the crate is small and I don't want to test private functionality

--- a/webserver/input_validator/Cargo.toml
+++ b/webserver/input_validator/Cargo.toml
@@ -13,6 +13,8 @@ categories = ["learning-tools::example-test-code"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+thiserror = "1.0"
+
 input_validator_derive = { path = "input_validator_derive", optional = true }
 
 [features]
